<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Krow</string>
    <string name="add_word">Añadir tarea</string>
    <string name="no_task">No tienes tareas pendientes.</string>


    <string name="hint_task_name"> Nueva tarea... </string>
    <string name="hint_task_description">Agrega una descripción.</string>
    <string name="button_save">Guardar</string>
    <string name="empty_not_saved"> No se puede guardar una tarea sin nombre.</string>
    <string name="no_desc">Prueba a crear la tarea antes.</string>
    <string name="no_priority">Sin prioridad</string>
    <string name="add_date">¿Para cuándo?</string>
    <string name="difficulty">Dificultad</string>
    <string name="name">Nombre de la tarea</string>
    <string name="description">Descripción</string>
    <string name="priority">Prioridad</string>
    <string name="duetime">Fecha de entrega</string>
    <string name="method_pomododoro">Pomodoro</string>
    <string name="method_saving">Método del ahorro</string>
    <string name="method_marathon">Método de la maratón</string>

    <string-array name="priorities">
        <item>Urgente</item>
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
        <item>Muy baja</item>
    </string-array>
    <string name="action_settings">Settings</string>


    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="admob_app_id">ca-app-pub-8300899048531479~8582154293</string>
    <string name="admob_banner_add">ca-app-pub-8300899048531479/9374461400</string>

    <string name="openSidebar">Abrir</string>
    <string name="closeSidebar">Cerrar</string>
    <string name="user_email_shrpref">SHARED_PREF_EMAIL</string>
    <string name="user_provider_shrpref">SHARED_PREF_PROVIDER</string>
    <string name="shrpref_file">co.edu.unal.clockrow.SHARED_PREFERENCES</string>
    <string name="purchase_error">La compra no se pudo completar.</string>
    <string name="user_username_shrpref">SHARED_PREF_USERNAME</string>
    <string name="user_premium_shrpref">SHARED_PREF_PREMIUM</string>
    <string name="user_logged_shrpref">SHARED_PREF_LOGGED</string>

</resources>
